<resources>
    <string name="app_name">Google Repositories</string>

    <string name="no_repositories">No repositories</string>
    <string name="google_logo_description">Google logo</string>

    <!-- ItemRepository: -->
    <string name="name_header">Name:</string>
    <string name="dummy_name">Dummy repository name</string>
    <string name="description_header">Description:</string>
    <string name="dummy_description">Dummy repository description</string>
    <string name="no_description">No description</string>

    <!-- AlertDialog: -->
    <string name="navigation_to_url_dialog_title">Do you want to navigate to this URL?</string>
    <string name="repository_without_url">The clicked repository does not have a URL associated with it.</string>
</resources>