<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/repository_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="1dp"
    android:layout_marginEnd="1dp"
    app:cardCornerRadius="16dp"
    app:contentPadding="16dp">

    <LinearLayout style="@style/GenericHorizontalLinearLayoutStyle">

        <ImageView
            android:id="@+id/login_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/google_logo_description"
            android:src="@drawable/ic_placeholder_image"
            tools:src="@drawable/ic_google_logo" />

        <LinearLayout
            style="@style/GenericVerticalLinearLayoutStyle"
            android:layout_marginEnd="16dp">

            <LinearLayout style="@style/GenericHorizontalLinearLayoutStyle">

                <TextView
                    android:id="@+id/name_header_text_view"
                    style="@style/ItemRepositoryHeaderTextViewStyle"
                    android:text="@string/name_header" />

                <TextView
                    android:id="@+id/name_text_view"
                    style="@style/ItemRepositoryBodyTextViewStyle"
                    tools:text="@string/dummy_name" />

            </LinearLayout>

            <LinearLayout style="@style/GenericVerticalLinearLayoutStyle">

                <TextView
                    android:id="@+id/description_header_text_view"
                    style="@style/ItemRepositoryHeaderTextViewStyle"
                    android:text="@string/description_header" />

                <TextView
                    android:id="@+id/description_text_view"
                    style="@style/ItemRepositoryBodyTextViewStyle"
                    android:layout_marginStart="0dp"
                    tools:text="@string/dummy_description" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
